--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: r
 pandoc_version: 1.19.2.1
 
 before_script:
-  - chmod +x ./_build.sh
-  - chmod +x ./_deploy.sh
+  - chmod +x ./deployment/_build.sh
+  - chmod +x ./deployment/_deploy.sh
 
 script:
-  - ./_build.sh
-  - ./_deploy.sh
+  - ./deployment/_build.sh
+  - ./deployment/_deploy.sh
