--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: r
-pandoc_version: 1.19.2.1
-
+sudo: false
+cache:
+  packages: true
+  directories:
+  - $TRAVIS_BUILD_DIR/_bookdown_files
 before_script:
   - chmod +x ./deployment/_build.sh
   - chmod +x ./deployment/_deploy.sh
-
 script:
-  - ./deployment/_build.sh
-  - ./deployment/_deploy.sh
+- travis_wait 45 "./deployment/_build.sh"
+after_success:
+- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && bash
+  deployment/_deploy.sh
