--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,5 +2,11 @@ Package: stat-100-honors-project
 Type: Book
 Title: STAT 100 Honors Project.
 Version: 0.0.1
-Imports: bookdown, swirl
+Imports:
+bookdown, 
+  rmarkdown,
+  knitr,
+  kableExtra,
+  magrittr,
+  MASS
 Remotes: rstudio/bookdown
